feat(setting): DB 설정
- DB 설정완료
- 모듈 구조화 완료
[TDL-6]

--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':todolist-biz')
+    implementation project(':todolist-common')
 
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
