--- a/todolist-dal/build.gradle
+++ b/todolist-dal/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':todolist-common')
-    implementation project(':todolist-dal')
 
-    implementation ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation ('org.springframework.boot:spring-boot-starter-jdbc')
+    implementation ('org.mariadb.jdbc:mariadb-java-client')
 }
