--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,15 @@ subprojects {
     dependencies {
         implementation ('org.projectlombok:lombok')
         annotationProcessor ('org.projectlombok:lombok')
-        testImplementation ('org.springframework.boot:spring-boot-starter-test')
         testImplementation ('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+        }
+        implementation ('org.springframework.cloud:spring-cloud-starter-vault-config')
+    }
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
 }
