--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     implementation project(':todolist-biz')
     implementation project(':todolist-common')
-
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-security')
