build(all): build.gradle 수정
jar, bootjar 설정 수정

--- a/todolist-dal/build.gradle
+++ b/todolist-dal/build.gradle
@@ -5,3 +5,11 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
     implementation ('org.mariadb.jdbc:mariadb-java-client')
 }
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
