--- a/todolist-biz/build.gradle
+++ b/todolist-biz/build.gradle
@@ -5,3 +5,11 @@ dependencies {
     implementation ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
 }
+
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
+}
