--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ subprojects {
         testImplementation ('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
-        implementation ('org.springframework.cloud:spring-cloud-starter-vault-config')
+//        implementation ('org.springframework.cloud:spring-cloud-starter-vault-config')
     }
 
     dependencyManagement {
