--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -5,10 +5,9 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-security')
-    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
-
+    implementation('io.jsonwebtoken:jjwt:0.9.1')   //자바 JWT 라이브러리
+    implementation('javax.xml.bind:jaxb-api:2.3.1') //XML 문서와 Java 객체 간 매핑 자동화
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 bootJar {
     enabled = false
