build(circle): dockerfile 지정
dockerfile 지정

[TDL-29]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,5 +47,5 @@ workflows:
     circleci-pipeline:
         jobs:
             -   springboot:
-                    name: dev-build
+                    name: circle-build
                     <<: *circleci_branch_only
