--- a/todolist-web/Dockerfile
+++ b/todolist-web/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:11
 RUN mkdir "/app"
-COPY /build/libs/app.jar /app/app.jar
+COPY /todolist-web/build/libs/app.jar /app/app.jar
 
 
 EXPOSE 8080
