build(circle): jar이름 수정
jar이름 수정

[TDL-29]

--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -7,9 +7,9 @@ dependencies {
 }
 bootJar {
     enabled = false
-    archiveName('app.jar')
 }
 
 jar {
     enabled = true
+    archiveFileName = 'app.jar'
 }
