--- a/todolist-web/Dockerfile
+++ b/todolist-web/Dockerfile
@@ -4,4 +4,4 @@ COPY /todolist-web/build/libs/app.jar /app/app.jar
 
 
 EXPOSE 8080
-CMD ["java","-Dspring.profiles.active=${USE_PROFILE}","-jar","/app/app.jar"]
+CMD ["java","-Dspring.profiles.active=${SPRING_PROFILE}","-jar","/app/app.jar"]
