build(circle): 레포지토리 수정
레포지토리 수정

[TDL-29]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
                     command: docker build -t todolist-dev -f ~/repo/todolist-web/Dockerfile .
             -   run:
                     name: push docker images
-                    command: docker push todolist-dev:latest
+                    command: docker push devs32/todolist-dev:latest
 
 workflows:
     dev-pipeline:
