build(circle): 레포지토리 수정
레포지토리 수정

[TDL-29]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
 
 workflows:
     dev-pipeline:
-        jobs:정
+        jobs:
             -   springboot:
                     name: dev-build
                     <<: *dev_branch_only
