--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation('io.jsonwebtoken:jjwt:0.9.1')   //자바 JWT 라이브러리
     implementation('javax.xml.bind:jaxb-api:2.3.1') //XML 문서와 Java 객체 간 매핑 자동화
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 bootJar {
     enabled = false
