--- a/todolist-web/src/main/resources/application-local.yaml
+++ b/todolist-web/src/main/resources/application-local.yaml
@@ -8,10 +8,14 @@ spring:
 #        password: vault
     cloud:
         vault:
-            uri: http://118.67.129.204:8200
+            uri: http://jparangdev.asuscomm.com:20003
             authentication: APPROLE
             app-role:
-                role-id: c100bffe-7b8d-c84e-8ef0-583af17cf0cf
-                secret-id: 551d75c1-e23f-8444-d9c4-a0c75de9002a
+                role-id: 2f6e47e1-8c7b-e3b0-b243-86e34674b7a2
+                secret-id: 72943a7d-b78b-85ff-a721-1e941e271fb8
                 role: todolist
-
+            kv:
+                enabled: true
+                backend: secrets
+                profile-separator: '/'
+                default-context: todolist/springboot
