--- a/todolist-biz/build.gradle
+++ b/todolist-biz/build.gradle
@@ -2,6 +2,7 @@ dependencies {
     implementation project(':todolist-common')
     implementation project(':todolist-dal')
 
+    implementation('io.jsonwebtoken:jjwt:0.9.1')
     implementation ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
 }
