--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
                     command: ./gradlew build
             -   setup_remote_docker:
                     version: 19.03.13
-            - run: docker build /todolist-web/DockerFile --tag devs32/todolist-springboot .
+            - run: docker build -f /todolist-web/DockerFile --tag devs32/todolist-springboot .
             - run: docker login -u devs32 -p ${DOCKER_PASSWORD}
             - run: docker push devs32/todolist-springboot
 
