--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,8 @@ jobs:
             -   setup_remote_docker:
                     version: 19.03.13
             - run: ls
-            - run: docker build -f /todolist-web/DockerFile --tag devs32/todolist-springboot .
-            - run: docker login -u devs32 -p ${DOCKER_PASSWORD}
+            - run: docker build -f todolist-web/DockerFile --tag devs32/todolist-springboot .
+            - run: docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             - run: docker push devs32/todolist-springboot
 
 workflows:
