--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,7 @@ jobs:
                     command: ./gradlew build
             -   setup_remote_docker:
                     version: 19.03.13
-            - run: ls
-            - run: cd todolist-web
-            - run: ls
+            - run: ls todolist-web
             - run: docker build -f todolist-web/DockerFile --tag devs32/todolist-springboot .
             - run: docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             - run: docker push devs32/todolist-springboot
