--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -8,10 +8,9 @@ dependencies {
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 bootJar {
-    enabled = false
+    archiveFileName = "app.jar"
 }
 
 jar {
-    enabled = true
-    archiveFileName = 'app.jar'
+    enabled = false
 }
