build(all): circleci 디버깅중
[TDL-45]

--- a/todolist-web/DockerFile
+++ b/todolist-web/DockerFile
@@ -1,8 +1,8 @@
 FROM openjdk:17
 
+RUN mkdir /workspace/todolist
 
-
-ADD ~/repo/todolist-web/build/libs/app.jar app.jar
+ADD /home/circleci/repo/todolist-web/build/libs/app.jar app.jar
 ADD setenv.sh setenv.sh
 
 EXPOSE 8080
