--- a/todolist-web/DockerFile
+++ b/todolist-web/DockerFile
@@ -1,6 +1,7 @@
 FROM openjdk:17
 
 RUN mkdir /workspace/todolist
+WORKDIR /workspace/todolist
 
 ADD /home/circleci/repo/todolist-web/build/libs/app.jar app.jar
 ADD setenv.sh setenv.sh
