--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
                     version: 19.03.13
             - run: pwd
             - run: ls todolist-web/build/libs
-            - run: docker build -f todolist-web/DockerFile --tag devs32/todolist-springboot .
+            - run: docker build -f todolist-web/DockerFile --tag devs32/todolist-springboot
             - run: docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             - run: docker push devs32/todolist-springboot
 
