build(all): circleci 디버깅중

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
                     version: 19.03.13
             - run: pwd
             - run: ls todolist-web/build/libs
-            - run: docker build -t devs32/todolist-springboot todolist-web/DockerFile
+            - run: docker build -t devs32/todolist-springboot todolist-web/
             - run: docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             - run: docker push devs32/todolist-springboot
 
