--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ circle_branch_only: &circle_branch_only
             only: circleci
 
 jobs:
-    springboot-build:
+    build and push:
         working_directory: ~/repo
         resource_class: medium
         docker:
@@ -34,16 +34,23 @@ jobs:
             -   run: docker build -t devs32/todolist-springboot todolist-web/
             -   run: docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             -   run: docker push devs32/todolist-springboot
+    run via ssh:
+        machine:
+            enabled: true
+        steps:
+            -   run:
+                    name: Deploy Over SSH
+                    command: ssh $SSH_USER@$SSH_HOST "<remote deploy command>"
 
 workflows:
     dev-pipeline:
         jobs:
-           - springboot-build:
+           - build and push:
                  name: dev-build
                  <<: *dev_branch_only
 
     test-pipeline:
         jobs:
-            - springboot-build:
+            - build and push:
                   name: test-build
                   <<: *circle_branch_only
