--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
         steps:
             -   run:
                     name: Deploy Over SSH
-                    command: ssh $SSH_USER@$SSH_HOST "<remote deploy command>"
+                    command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT "<remote deploy command>"
 
 workflows:
     dev-pipeline:
