--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
         steps:
             -   run:
                     name: connect ssh
-                    command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT "docker rm todolist \ docker pull devs32/todoslit"
+                    command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT "docker pull devs32/todoslit"
 
 workflows:
     test-pipeline:
