--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
         steps:
             -   run:
                     name: connect ssh
-                    command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT "docker pull devs32/todoslit"
+                    command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT "/devs32/todolist/script/deploy.sh"
 
 workflows:
     test-pipeline:
@@ -81,6 +81,5 @@ workflows:
                     <<: *circle_branch_only
             -   run via ssh:
                     requires:
-                        - build
                         - push
                     <<: *circle_branch_only
