--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,9 @@ jobs:
         machine:
             enabled: true
         steps:
+            -   add_ssh_keys:
+                    fingerprints:
+                        - "d5:8a:ae:26:98:22:bd:70:9c:73:23:f6:2a:b3:bf:29"
             -   run:
                     name: connect ssh
                     command: ssh $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/todolist/script/deploy.sh
