build(all): circleci 디버깅중

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,8 @@ jobs:
                     fingerprints:
                         - "d5:8a:ae:26:98:22:bd:70:9c:73:23:f6:2a:b3:bf:29"
             -   run:
-                    name: connect ssh
-                    command: ssh devs32-docker@jparangdev.asuscomm.com -p 7100 /devs32/todolist/script/deploy.sh
+                    name: connect ssh and run
+                    command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/todolist/script/deploy.sh
 
 workflows:
     test-pipeline:
