--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,12 +66,12 @@ jobs:
         machine:
             enabled: true
         steps:
-            -   add_ssh_keys:
-                    fingerprints:
-                        - "d5:8a:ae:26:98:22:bd:70:9c:73:23:f6:2a:b3:bf:29"
+            -   run:
+                    name: Add SSH host to known
+                    command: ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
             -   run:
                     name: connect ssh and run Tes
-                    command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT StrictHostKeyChecking=no /devs32/todolist/script/deploy.sh
+                    command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/todolist/script/deploy.sh
 
 workflows:
     test-pipeline:
