--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,8 +67,8 @@ jobs:
             enabled: true
         steps:
             -   run:
-                    name: Add SSH host to known
-                    command: ssh-keyscan -H $SSH_HOST >> ~/.ssh/known_hosts
+                    name: add SSH host to known
+                    command: ssh-keyscan -t ras $SSH_HOST >> ~/.ssh/known_hosts
             -   run:
                     name: connect ssh and run Tes
                     command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/todolist/script/deploy.sh
