--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ jobs:
         steps:
             -   run:
                     name: add SSH host to known
-                    command: ssh-keyscan -t ras $SSH_HOST >> ~/.ssh/known_hosts
+                    command: ssh-keyscan -t rsa $SSH_HOST >> ~/.ssh/known_hosts
             -   run:
                     name: connect ssh and run Tes
                     command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/todolist/script/deploy.sh
