--- a/todolist-web/src/main/resources/application-develop.yaml
+++ b/todolist-web/src/main/resources/application-develop.yaml
@@ -1,20 +1,43 @@
 spring:
-    config:
-        import: optional:vault://todolist/springboot
-    cloud:
-        vault:
-            uri: http://jparangdev.asuscomm.com:20003
-            authentication: APPROLE
-            app-role:
-                role-id: 2f6e47e1-8c7b-e3b0-b243-86e34674b7a2
-                secret-id: ea735536-a7c8-1965-b250-5a4e19b3b9e8
-                role: todolist
+#    config:
+#        import: optional:vault://todolist/springboot
+#    cloud:
+#        vault:
+#            uri: http://jparangdev.asuscomm.com:20003
+#            authentication: APPROLE
+#            app-role:
+#                role-id: 2f6e47e1-8c7b-e3b0-b243-86e34674b7a2
+#                secret-id: ea735536-a7c8-1965-b250-5a4e19b3b9e8
+#                role: todolist
+    datasource:
+        driver-class-name: org.mariadb.jdbc.Driver
+        url: jdbc:mariadb://localhost:3306/tdl
+        username: devs32
+        password: 1989
     jpa:
         show-sql: true
         properties:
             hibernate:
                 format_sql: true
         defer-datasource-initialization: true
+    security:
+      oauth2:
+        client:
+            registration:
+              naver:
+                 client-id: msibe18JNNFh9L69e4p_
+                 client-secret: rZOGbYWOiZ
+                 redirect-uri: http://localhost:8080/naver/callback
+                 authorization-grant-type: authorization_code
+                 scope:
+                   - name
+                   - email
+            provider:
+              naver:
+                  authorization-uri: https://nid.naver.com/oauth2.0/authorize
+                  token-uri: https://nid.naver.com/oauth2.0/token
+                  user-info-uri: https://openapi.naver.com/v1/nid/me
+                  user-name-attribute: response
 jwt:
     issuer: pjhwin1@gmail.com
     secret_key: study-springboot-todolist
@@ -25,3 +48,5 @@ jwt:
 logging:
     level:
         kr.co.devs32.todolist: DEBUG
+
+
