--- a/todolist-web/src/main/resources/application-develop.yaml
+++ b/todolist-web/src/main/resources/application-develop.yaml
@@ -1,19 +1,14 @@
 spring:
-#    config:
-#        import: optional:vault://todolist/springboot
-#    cloud:
-#        vault:
-#            uri: http://jparangdev.asuscomm.com:20003
-#            authentication: APPROLE
-#            app-role:
-#                role-id: 2f6e47e1-8c7b-e3b0-b243-86e34674b7a2
-#                secret-id: ea735536-a7c8-1965-b250-5a4e19b3b9e8
-#                role: todolist
-    datasource:
-        driver-class-name: org.mariadb.jdbc.Driver
-        url: jdbc:mariadb://localhost:3306/tdl
-        username: devs32
-        password: 1989
+    config:
+        import: optional:vault://todolist/springboot
+    cloud:
+        vault:
+            uri: http://jparangdev.asuscomm.com:20003
+            authentication: APPROLE
+            app-role:
+                role-id: 2f6e47e1-8c7b-e3b0-b243-86e34674b7a2
+                secret-id: ea735536-a7c8-1965-b250-5a4e19b3b9e8
+                role: todolist
     jpa:
         show-sql: true
         properties:
