perf(swagger): Add Swagger3
Swagger 설정 추가

/doc/swagger-ui.html로 접속하면 ui확인 가능

Closes TDL-59

--- a/todolist-web/src/main/resources/application.yaml
+++ b/todolist-web/src/main/resources/application.yaml
@@ -14,3 +14,9 @@ spring:
                 role: todolist
     config:
         import: optional:vault://todolist/springboot
+
+springdoc:
+    swagger-ui:
+        path: /doc/swagger-ui.html
+    api-docs:
+        path: /doc/api-docs
