--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,5 @@ javaVersion = 17
 springBootVersion = 3.0.4
 springDependencyManagementVersion = 1.0.11.RELEASE
 springCloudVersion = 2022.0.2
+springDocOpenApiVersion = 2.0.2
 
