--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -8,6 +8,7 @@ dependencies {
 
     implementation('io.jsonwebtoken:jjwt:0.9.1')   //자바 JWT 라이브러리
     implementation('javax.xml.bind:jaxb-api:2.3.1') //XML 문서와 Java 객체 간 매핑 자동화
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}") // api 문서 자동화
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 bootJar {
