--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,17 @@ buildscript {
     }
 }
 
+plugins {
+    id 'jacoco'
+    id "org.sonarqube" version "${sonarPluginVersion}"
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'jacoco'
+    apply plugin: 'org.sonarqube'
 
     group = 'kr.co.devs32'
     version = '1.0'
@@ -40,4 +47,22 @@ subprojects {
             mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
         }
     }
+
+    jacocoTestReport {
+        reports {
+            xml.enabled true
+        }
+    }
+
+    sonarqube {
+        properties {
+            property "sonar.projectKey", "Devs32_todolist-springboot"
+            property "sonar.organization", "devs32"
+            property "sonar.host.url", "https://sonarcloud.io"
+            property "sonar.login", "1ba4727042c0120ceecf535c0acacc6e16cb8cfa"
+            property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+            property "sonar.sources", "src"
+        }
+    }
 }
+
