--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ javaVersion = 17
 springBootVersion = 3.0.4
 springDependencyManagementVersion = 1.0.11.RELEASE
 springCloudVersion = 2022.0.2
-
+sonarPluginVersion = 4.4.1.3373
