--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':todolist-biz')
     implementation project(':todolist-common')
+    implementation project(':todolist-dal')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-security')
