--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,11 +59,11 @@ jobs:
                     command: docker push $IMAGE_NAME:latest
     run via ssh:
         machine:
-            image: ubuntu-2204:2023.07.2
+            image: ubuntu-2204:2024.01.1
         steps:
             -   run:
                     name: connect ssh and run
-                    command: ssh -v $SSH_USER@$SSH_HOST -p $SSH_PORT /devs32/script/todolist/deploy_todolist.sh
+                    command: ssh -v $SSH_USER@$SSH_HOST /home/devs32/script/todolist/deploy_todolist.sh
 
 workflows:
     develop-pipeline:
