--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,7 @@ jobs:
         steps:
             -   run:
                     name: connect ssh and run
-                    command: ssh -v $SSH_USER@$SSH_HOST /home/devs32/script/deploy_todolist.sh
+                    command: ssh -v $SSH_USER@$SSH_HOST /home/$SSH_USER/script/deploy_springboot.sh
 
 workflows:
     develop-pipeline:
