vault 제거, database 변경
실행 설정값 변경되어야함

--- a/todolist-dal/build.gradle
+++ b/todolist-dal/build.gradle
@@ -3,7 +3,8 @@ dependencies {
 
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
-    implementation ('org.mariadb.jdbc:mariadb-java-client')
+    implementation ('org.postgresql:postgresql')
+//    implementation ('org.mariadb.jdbc:mariadb-java-client')
 }
 
 bootJar {
