--- a/todolist-web/src/main/resources/application-local.yaml
+++ b/todolist-web/src/main/resources/application-local.yaml
@@ -1,10 +1,7 @@
 spring:
     jpa:
-        show-sql: true
-        properties:
-            hibernate:
-                format_sql: true
-        defer-datasource-initialization: true
+        hibernate:
+            ddl-auto: update
     security:
         oauth2:
             client:
@@ -33,5 +30,3 @@ jwt:
 logging:
     level:
         kr.co.devs32.todolist: DEBUG
-
-
