--- a/todolist-web/src/main/resources/application.yaml
+++ b/todolist-web/src/main/resources/application.yaml
@@ -1,20 +1,16 @@
 spring:
     datasource:
-        driver-class-name: org.mariadb.jdbc.Driver
-        #url: vault
-        #username: vault
-        #password: vault
-    cloud:
-        vault:
-            uri: http://35.247.121.180:20003/
-            authentication: APPROLE
-            app-role:
-                role-id: ${vaultRoleId}
-                secret-id: ${vaultSecretId}
-                role: ${vaultRole}
-    config:
-        import: optional:vault://todolist/dev/spring-boot
-
+        driver-class-name: org.postgresql.Driver
+        url: jdbc:postgresql://aws-0-ap-northeast-2.pooler.supabase.com:5432/postgres
+        username: ${databaseUsername}
+        password: ${databasePassword}
+    jpa:
+        show-sql: true
+        properties:
+            hibernate:
+                default_schema: public
+                format_sql: true
+        defer-datasource-initialization: true
 springdoc:
     swagger-ui:
         path: /doc/swagger-ui.html
