--- a/todolist-dal/build.gradle
+++ b/todolist-dal/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':todolist-common')
+    implementation project(':todolist-domain')
 
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
