--- a/todolist-biz/build.gradle
+++ b/todolist-biz/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     implementation project(':todolist-common')
     implementation project(':todolist-dal')
+    implementation project(':todolist-web')
 
     implementation('io.jsonwebtoken:jjwt:0.9.1')
     implementation ("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
