--- a/todolist-web/build.gradle
+++ b/todolist-web/build.gradle
@@ -1,8 +1,7 @@
 dependencies {
-    implementation project(':todolist-biz')
     implementation project(':todolist-domain')
     implementation project(':todolist-common')
-    implementation project(':todolist-dal') // deprecated
+    implementation project(':todolist-dal')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-security')
